[gd_scene load_steps=16 format=3 uid="uid://cnva1t7elyuce"]

[ext_resource type="Theme" uid="uid://jn71302gkvqy" path="res://hud_theme.tres" id="1_5ysmq"]
[ext_resource type="Script" uid="uid://biwrxmh77pnjx" path="res://scripts/hud.gd" id="2_apjy4"]
[ext_resource type="Script" uid="uid://ibdx6nkw1dxg" path="res://scripts/HUD/resize_control.gd" id="3_mphia"]
[ext_resource type="Script" uid="uid://c426xsof0jwpb" path="res://scripts/HUD/resize_state_bar.gd" id="4_0i1j5"]
[ext_resource type="FontFile" uid="uid://cpy65047eb1jb" path="res://font/Minecraftia-Regular.ttf" id="4_6fi6k"]
[ext_resource type="Texture2D" uid="uid://e14rlujxv2r6" path="res://assets/bar/filled_bar.png" id="5_047uy"]
[ext_resource type="Texture2D" uid="uid://b5htmoxepvs57" path="res://assets/bar/health_bar_empty.png" id="5_uo2fv"]
[ext_resource type="Texture2D" uid="uid://c7orjokudtall" path="res://assets/bar/efficiency_bar_empty.png" id="6_hd3ao"]
[ext_resource type="Texture2D" uid="uid://dxoevfrf00nn6" path="res://assets/bar/happiness_bar_empty.png" id="7_0i1j5"]
[ext_resource type="Script" uid="uid://blpgf8txxyl8p" path="res://scripts/crop_bar.gd" id="7_mphia"]
[ext_resource type="Script" uid="uid://dfm8a1cu60p68" path="res://scripts/button_action.gd" id="11_0m4u7"]
[ext_resource type="Script" uid="uid://0h5bj5sdmbnu" path="res://scripts/info_panel.gd" id="14_eld54"]
[ext_resource type="Script" uid="uid://duh3gfg5gvrcg" path="res://scripts/night_mode.gd" id="17_3xg78"]
[ext_resource type="Script" uid="uid://bqulw7dgngjad" path="res://scripts/InventaireUI.gd" id="17_uxdf7"]

[sub_resource type="GDScript" id="GDScript_mphia"]
script/source = "extends RichTextLabel

const BASE_RES = Vector2(1920, 1080)

func _ready():
	_resize()
	get_viewport().connect(\"size_changed\", Callable(self, \"_resize\"))

func _resize():
	var screen_size = get_viewport_rect().size
	var scale_factor = min(
		screen_size.x / BASE_RES.x,
		screen_size.y / BASE_RES.y
	)
	
	# On applique uniquement l'échelle
	self.scale = Vector2(scale_factor, scale_factor)
"

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5ysmq")
script = ExtResource("2_apjy4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="background" type="Panel" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.15
grow_horizontal = 2
grow_vertical = 2

[node name="date" type="RichTextLabel" parent="CanvasLayer/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.2
anchor_right = 0.03
anchor_bottom = 0.2
offset_right = 183.2
offset_bottom = 91.0
theme_override_fonts/normal_font = ExtResource("4_6fi6k")
bbcode_enabled = true
text = "[center][font_size=24]XX/XX/2025"
script = ExtResource("3_mphia")

[node name="temperature" type="RichTextLabel" parent="CanvasLayer/background/date"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -61.5
offset_top = -42.0
offset_right = 61.5
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("4_6fi6k")
bbcode_enabled = true
text = "[center][font_size=24]24 C°"

[node name="argent" type="RichTextLabel" parent="CanvasLayer/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.97
anchor_top = 0.2
anchor_right = 0.97
anchor_bottom = 0.2
offset_left = -181.4
offset_top = -0.400002
offset_right = -0.400024
offset_bottom = 34.6
grow_horizontal = 0
theme_override_fonts/normal_font = ExtResource("4_6fi6k")
bbcode_enabled = true
text = "[right][font_size=24]1 000 000 €"
scroll_active = false
script = SubResource("GDScript_mphia")

[node name="state_bar" type="HBoxContainer" parent="CanvasLayer/background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -667.5
offset_right = 667.5
offset_bottom = 133.0
grow_horizontal = 2
script = ExtResource("4_0i1j5")

[node name="HealthBarEmpty" type="Sprite2D" parent="CanvasLayer/background/state_bar"]
position = Vector2(160, 90)
scale = Vector2(2.875, 2.875)
texture = ExtResource("5_uo2fv")
region_enabled = true
region_rect = Rect2(8.589, 45.353, 109.282, 54.51)

[node name="FilledBarHealth" type="Sprite2D" parent="CanvasLayer/background/state_bar/HealthBarEmpty"]
position = Vector2(-29.231003, -27.259998)
texture = ExtResource("5_047uy")
centered = false
region_enabled = true
region_rect = Rect2(33.999, 45.353, 83.872, 54.51)
script = ExtResource("7_mphia")

[node name="Health_text" type="RichTextLabel" parent="CanvasLayer/background/state_bar/HealthBarEmpty"]
anchors_preset = -1
anchor_left = 0.6
anchor_top = 1.0
anchor_right = 0.6
anchor_bottom = 1.0
offset_left = -95.9728
offset_top = -48.7826
offset_right = -13.0272
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("4_6fi6k")
bbcode_enabled = true
text = "[center][font_size=8]Santé"

[node name="EfficiencyBarEmpty" type="Sprite2D" parent="CanvasLayer/background/state_bar"]
position = Vector2(500, 90)
scale = Vector2(2.875, 2.875)
texture = ExtResource("6_hd3ao")
region_enabled = true
region_rect = Rect2(8.589, 45.353, 109.282, 54.51)

[node name="FilledBarEfficiency" type="Sprite2D" parent="CanvasLayer/background/state_bar/EfficiencyBarEmpty"]
position = Vector2(-29.231, -27.26)
texture = ExtResource("5_047uy")
centered = false
region_enabled = true
region_rect = Rect2(33.9985, 45.353, 83.8725, 54.51)
script = ExtResource("7_mphia")

[node name="Efficiency_text" type="RichTextLabel" parent="CanvasLayer/background/state_bar/EfficiencyBarEmpty"]
anchors_preset = -1
anchor_left = 0.6
anchor_top = 1.0
anchor_right = 0.6
anchor_bottom = 1.0
offset_left = -95.9728
offset_top = -48.7826
offset_right = -13.0272
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("4_6fi6k")
bbcode_enabled = true
text = "[center][font_size=8]Efficacité"

[node name="HappinessBarEmpty" type="Sprite2D" parent="CanvasLayer/background/state_bar"]
position = Vector2(840, 90)
scale = Vector2(2.875, 2.875)
texture = ExtResource("7_0i1j5")
region_enabled = true
region_rect = Rect2(8.589, 45.353, 109.282, 54.51)

[node name="FilledBarHappiness" type="Sprite2D" parent="CanvasLayer/background/state_bar/HappinessBarEmpty"]
position = Vector2(-29.231, -27.26)
texture = ExtResource("5_047uy")
centered = false
region_enabled = true
region_rect = Rect2(33.9985, 45.353, 83.8725, 54.51)
script = ExtResource("7_mphia")

[node name="Happiness_text" type="RichTextLabel" parent="CanvasLayer/background/state_bar/HappinessBarEmpty"]
anchors_preset = -1
anchor_left = 0.6
anchor_top = 1.0
anchor_right = 0.6
anchor_bottom = 1.0
offset_left = -95.9728
offset_top = -48.7826
offset_right = -13.0272
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("4_6fi6k")
bbcode_enabled = true
text = "[center][font_size=8]Bonheur"

[node name="shop_button" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.9
anchor_right = 0.1
anchor_bottom = 0.9
offset_top = -54.0
offset_right = 156.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_6fi6k")
theme_override_font_sizes/font_size = 24
text = "Boutique"
script = ExtResource("11_0m4u7")

[node name="nightMode" type="Button" parent="CanvasLayer"]
offset_left = 1533.0
offset_top = 736.0
offset_right = 1710.0
offset_bottom = 880.0
text = "Night mode"

[node name="filtre_night" type="CanvasLayer" parent="CanvasLayer/nightMode"]
layer = 0
visible = false
script = ExtResource("17_3xg78")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/nightMode/filtre_night"]
offset_left = -61.0
offset_top = -39.0
offset_right = 1986.0
offset_bottom = 1130.0
mouse_filter = 2
color = Color(0, 0.03529412, 0.03529412, 0.8627451)

[node name="recherche_button" type="Button" parent="CanvasLayer"]
offset_left = 1713.0
offset_top = 197.0
offset_right = 1871.0
offset_bottom = 267.0
text = "Recherches"
script = ExtResource("11_0m4u7")

[node name="pause_button" type="Button" parent="CanvasLayer"]
offset_left = 56.0
offset_top = 184.0
offset_right = 214.0
offset_bottom = 254.0
text = "Pause
"
script = ExtResource("11_0m4u7")

[node name="Inventaire" type="Control" parent="."]
anchors_preset = 0
offset_left = 61.0
offset_top = 243.0
offset_right = 189.0
offset_bottom = 795.0
script = ExtResource("17_uxdf7")

[node name="ScrollInventaire" type="ScrollContainer" parent="Inventaire"]
layout_mode = 0
offset_left = 13.0
offset_top = 58.0
offset_right = 141.0
offset_bottom = 610.0

[node name="MarginInventaire" type="MarginContainer" parent="Inventaire/ScrollInventaire"]
layout_mode = 2

[node name="GridInventaire" type="GridContainer" parent="Inventaire/ScrollInventaire/MarginInventaire"]
layout_mode = 2
size_flags_vertical = 4

[node name="InfoPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 1688.0
offset_top = 314.0
offset_right = 1891.0
offset_bottom = 580.0
script = ExtResource("14_eld54")

[node name="LabelNom" type="Label" parent="InfoPanel"]
layout_mode = 0
offset_left = 36.0
offset_top = 19.0
offset_right = 145.0
offset_bottom = 60.0
text = "Nom"

[node name="LabelBonheur" type="Label" parent="InfoPanel"]
layout_mode = 0
offset_left = 36.0
offset_top = 101.0
offset_right = 171.0
offset_bottom = 142.0
text = "Bonheur"

[node name="LabelSante" type="Label" parent="InfoPanel"]
layout_mode = 0
offset_left = 36.0
offset_top = 60.0
offset_right = 171.0
offset_bottom = 101.0
text = "Santé"

[node name="LabelDescription" type="Label" parent="InfoPanel"]
layout_mode = 0
offset_left = 36.0
offset_top = 142.0
offset_right = 171.0
offset_bottom = 247.0
text = "Description"
autowrap_mode = 2

[node name="BtnFermer" type="Button" parent="InfoPanel"]
layout_mode = 0
offset_left = 166.0
offset_right = 203.0
offset_bottom = 36.0
text = "X"

[connection signal="pressed" from="CanvasLayer/shop_button" to="CanvasLayer/shop_button" method="_on_pressed_shop"]
[connection signal="pressed" from="CanvasLayer/nightMode" to="CanvasLayer/nightMode/filtre_night" method="_on_night_mode_pressed"]
[connection signal="pressed" from="CanvasLayer/recherche_button" to="CanvasLayer/recherche_button" method="_on_pressed_recherches"]
[connection signal="pressed" from="CanvasLayer/pause_button" to="CanvasLayer/pause_button" method="_on_pressed_pause"]
